stderr
JudgeMan.java:12: error: ')' expected
        if(ans!){
              ^
JudgeMan.java:12: error: illegal start of expression
        if(ans!){
               ^
2 errors
